--- a/package.json
+++ b/package.json
@@ -1,24 +1,39 @@
 {
-  "name": "sc-errors",
-  "version": "2.0.1",
-  "description": "Error types for use throughout SocketCluster",
+	"name": "@socket-mesh/errors",
+  "version": "3.0.0",
+  "description": "Error types for use throughout SocketMesh and SocketCluster",
+  "contributors": [
+    "Greg Kimmy",
+		{
+			"name": "Jonathan Gros-Dubois",
+			"email": "grosjona@yahoo.com.au"
+		}
+  ],
   "main": "index.js",
   "scripts": {
+    "build": "node ./scripts/build.mjs && tsc",
+    "deploy": "cd dist && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/SocketCluster/sc-errors.git"
+    "url": "git://github.com/socket-mesh/formatter.git"
   },
   "keywords": [
     "errors",
-    "socketcluster"
+    "socketcluster",
+		"socketmesh"
   ],
-  "author": "Jonathan Gros-Dubois <grosjona@yahoo.com.au>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/SocketCluster/sc-errors/issues"
+    "url": "https://github.com/socket-mesh/errors/issues"
   },
-  "homepage": "https://github.com/SocketCluster/sc-errors",
-  "dependencies": {}
+  "homepage": "https://github.com/socket-mesh/errors",	
+  "dependencies": {},
+  "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.10",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.0.5"
+  }
 }
