Updated package json to be a module

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "@socket-mesh/errors",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "description": "Error types for use throughout SocketMesh and SocketCluster",
+	"type":"module",
   "contributors": [
     "Greg Kimmy",
 		{
