--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-		"rootDir": "./lib",
+		"rootDir": "./src",
     "outDir": "./dist/",
     "noImplicitAny": true,
     "module": "ES2015",
