--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,13 @@
 		"rootDir": "./src",
     "outDir": "./dist/",
     "noImplicitAny": true,
-    "module": "ES2015",
-    "target": "ES2015",
+    "module": "ES2020",
+    "target": "ES2020",
 		"declaration": true,
 		"allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
 		"esModuleInterop": true,
-		"lib": ["es2015", "dom"]
+		"lib": ["ES2020", "dom"]
   },
 	"exclude": ["test", "dist", "**/*.spec.ts"]
 }
