--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@socket-mesh/errors",
-	"version": "3.1.3",
-	"description": "Error types for use throughout SocketMesh and SocketCluster",
+	"version": "3.1.4",
+	"description": "Error types for use throughout SocketMesh",
 	"type": "module",
 	"contributors": [
 		"Greg Kimmy",
